# rpyc_async

./: ASYNC_CALLBACKS_ANALYSIS.md  ASYNC_DISPATCH_PIPELINE_EXPLAINED.md  ASYNC_SUPPORT_PROPOSAL.md  ASYNC_SUPPORT_PROPOSAL_V2.md  CHANGELOG.rst  CONTRIBUTORS.rst  FINAL_ANALYSIS.md  IMPLEMENTATION_DESIGN.md  LICENSE  README.rst  REFCOUNT_MONITORING.md  pyproject.toml  test_asyncio_debug.py  test_asyncio_server_simple.py  test_asyncio_simple.py  test_client_sync.py  test_integrated.py  test_integrated_debug.py  test_port_check.py  test_server_only.py  test_simple_connect_to_asyncioserver.py  test_socket_accept.py
docs/: API_REFERENCE.md  ASYNCIO_SERVER_MIGRATION.md  ASYNC_DISPATCH_PIPELINE_EXPLAINED.md  ASYNC_SUPPORT_PROPOSAL.md  ASYNC_SUPPORT_PROPOSAL_V2.md  DEBUG_REFCOUNTING.md  DESIGN_ASYNC_CONNECT_POLICY.md  DESIGN_BIDIRECTIONAL_ASYNC_FIXES.md  DESIGN_DISPATCH_TASK_LEAK_ON_DISCONNECT.md  DESIGN_FIRE_AND_FORGET.md  DESIGN_HANDLE_DEL_SUPPRESS_ON_CLOSED.md  DESIGN_INBOUND_BACKPRESSURE.md  DESIGN_NESTED_ASYNC_RESULT.md  DESIGN_NO_POLLING_ASYNCIO_READ.md  DESIGN_NO_SAME_PROCESS_TESTS.md  DESIGN_PID_NAMESPACED_ID_PACK.md  DESIGN_REFCOUNT_RACE_FIX.md  DESIGN_REFCOUNT_RACE_FIX_A.md  EXAMPLES.md  IMPLEMENTATION_DESIGN.md  IMPLEMENTATION_SUMMARY.md  LIMITATIONS.md  MIGRATION_GUIDE.md  NETREF_LIFECYCLE_ANALYSIS_AND_SOLUTION.md  README.md  REMOVE_OLD_DELETION_MECHANISM.md  conf.py  guide_fire_and_forget.md  issue_template.md
rpyc/: __init__.py
rpyc_async/: __init__.py  version.py
tests/: README.md  REFCOUNT_ERRORS_ANALYSIS.md  REFCOUNT_LOGGING_INVESTIGATION.md  TESTING_BEST_PRACTICES.md  __init__.py  gdb_service.py  support.py  test_async_boxing.py  test_async_connect.py  test_async_connect_async_exposed.py  test_async_connect_policy.py  test_async_consts.py  test_async_detection.py  test_async_dispatch.py  test_async_dispatch_eof.py  test_async_dispatch_simple.py  test_async_frame_buffer.py  test_async_handlers.py  test_async_reader_no_poll.py  test_async_working_patterns.py  test_asyncio_server_bidirectional.py  test_asyncio_server_reconnection.py  test_asyncresult_await.py  (+75 more)
(+81 files in other folders)
