[build-system]
requires = [
    "hatchling>=1.6.0",
]
build-backend = "hatchling.build"

[project]
name = "rpyc-async"
description = "Asyncio-native fork of RPyC for reliable and efficient asynchronous inter-process calls"
readme = "README.rst"
license = {text = "MIT License"}
requires-python = ">=3.10"
authors = [
    { name = "Roman Rodionov" },
]
maintainers = [
    { name = "Roman Rodionov" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "plumbum",
]
dynamic = [
    "version",
]

[project.urls]
Homepage = "https://github.com/rr-develop/rpyc_async"
Source = "https://github.com/rr-develop/rpyc_async"

[project.scripts]
rpyc-async-classic = "rpyc_async.cli.rpyc_classic:main"
rpyc-async-registry = "rpyc_async.cli.rpyc_registry:main"

[tool.hatch.version]
path = "rpyc_async/version.py"

[tool.hatch.build.targets.sdist]
only-include = ["rpyc_async"]


[tool.hatch.build.targets.wheel]
only-include = ["rpyc_async"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.codespell]
skip = '.git,*.pdf,*.svg'
ignore-words-list = 'asend,disjointness'
